<resources>
    <string name="app_name">ComputerSolutionService</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_menu_requestlist">Request List</string>
    <string name="nav_menu_newrequest">New Request</string>
    <string name="nav_menu_pendingbill">Pending Bills</string>
    <string name="nav_menu_clients">List of clients</string>
    <string name="nav_menu_sync">Sync</string>
    <string name="nav_menu_syncclient">Client details</string>
    <string name="nav_menu_syncequipmentlist">Equipment list</string>
    <string name="strusername">Username</string>
    <string name="strpassword">Password</string>
    <string name="strrequestid">Req Id</string>
    <string name="strissueheading">Issue</string>
    <string name="strstatus">Status</string>
    <string name="strdetails">Details</string>
    <string name="strpartsused">Part Used</string>
    <string name="strpayment">Payment</string>
    <string name="strcontactperson">Contact Person</string>
    <string name="strmobileno">Mobile No.</string>
    <string name="strrequestraisedon">Request raised on</string>
    <string name="strengineername">Engineer name</string>
    <string name="strissue">Issue</string>
    <string name="strissuedetails">Issue Details</string>
    <string name="strclientname">Client name</string>
    <string name="strclientaddress">Client address</string>
    <string name="strchangestatus">Change status</string>
    <string name="strequipmentused">Equipments used</string>
    <string name="straddequipment">Add equipments</string>
    <string name="strupdateonissue">Update on issue</string>
    <string name="strcash">Cash</string>
    <string name="strcheque">Cheque</string>
    <string name="stramc">AMC</string>
    <string name="stramount">Amount</string>
    <string name="strchequeddetails">Cheque details</string>
    <string name="strchequeno">Cheque No.</string>
    <string name="strchequebankdetail">Bank detail</string>
    <string name="strqty">Quantity</string>
    <string name="strsubmit">Submit</string>
</resources>
