<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/textview_lable_issueheading"
                    android:layout_width="@dimen/labelwidth"
                    android:layout_height="wrap_content"
                    android:text="@string/strissueheading"
                    android:textSize="@dimen/textsize_medium"
                    android:textColor="@color/colorgray"/>

            <TextView
                    android:id="@+id/textview_issueheading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="fgfgfgfgfgf fdfddfdfdfdfdfdfdf"
                    android:textSize="@dimen/textsize_medium"
                    android:textColor="@color/colorblack"
                    android:paddingLeft="8dp"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">
            <TextView
                    android:id="@+id/textview_lable_issuedetail"
                    android:layout_width="@dimen/labelwidth"
                    android:layout_height="wrap_content"
                    android:text="@string/strdetails"
                    android:textSize="@dimen/textsize_medium"
                    android:textColor="@color/colorgray"/>

            <TextView
                    android:id="@+id/textview_issuedetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="detail of issue"
                    android:textSize="@dimen/textsize_medium"
                    android:textColor="@color/colorblack"
                    android:paddingLeft="8dp"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">
            <TextView
                    android:id="@+id/textview_lable_changestatus"
                    android:layout_width="@dimen/labelwidth"
                    android:layout_height="wrap_content"
                    android:text="@string/strstatus"
                    android:textSize="@dimen/textsize_medium"
                    android:textColor="@color/colorgray"/>
            <Spinner
                    android:id="@+id/spnr_changestatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Resolved"
                    android:paddingLeft="5dp"/>
        </LinearLayout>
        <TextView
                android:id="@+id/textview_lable_equipmentused"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strequipmentused"
                android:textSize="@dimen/textsize_medium"
                android:textColor="@color/colorgray"
                android:layout_marginTop="5dp"/>

        <LinearLayout
                android:id="@+id/lylt_equipmentused"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"/>
        <TextView
                android:id="@+id/textview_lable_addequipment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/straddequipment"
                android:drawableLeft="@android:drawable/ic_input_add"
                android:gravity="center_vertical"
                android:textSize="@dimen/textsize_medium"
                android:textColor="@color/colorgray"
                android:layout_marginTop="5dp"/>


        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_updateonissue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
            <EditText
                    android:id="@+id/edittext_updateonissue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/strupdateonissue"
                    android:singleLine="false"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
                android:id="@+id/textview_lable_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strpayment"
                android:textSize="@dimen/textsize_medium"
                android:textColor="@color/colorgray"
                android:layout_marginTop="5dp"/>

        <RadioGroup
                android:id="@+id/rg_paymenttype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <RadioButton
                    android:id="@+id/rb_cash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strcash"/>

            <RadioButton
                    android:id="@+id/rb_cheque"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strcheque"/>

            <RadioButton
                    android:id="@+id/rb_amc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stramc"/>
        </RadioGroup>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_cashamount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
            <EditText
                    android:id="@+id/edittext_cashamount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/stramount"
                    android:singleLine="false"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp">
            <TextView
                    android:id="@+id/textview_lable_chequedetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strchequeddetails"
                    android:textSize="@dimen/textsize_medium"
                    android:textColor="@color/colorgray"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_chequeamount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <EditText
                            android:id="@+id/edittext_chequeamount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/stramount"
                            android:singleLine="false"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_chequeno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <EditText
                            android:id="@+id/edittext_chequeno"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/strchequeno"
                            android:singleLine="false"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_chequebankdetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/edittext_chequebankdetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/strchequebankdetail"
                        android:singleLine="false"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>