<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:layout_margin="10dp">

    <Spinner
            android:id="@+id/spnr_clientname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/textview_clientaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Adress detail"
            android:layout_marginTop="15dp"
            android:focusable="false"/>
    <LinearLayout
            android:id="@+id/lylt_contactdetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_contactperson"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="75">
            <EditText
                    android:id="@+id/edittext_contactperson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/strcontactperson"
                    android:maxLength="150"
                    android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_contactperson_mobileno"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25">
            <EditText
                    android:id="@+id/edittext_contactperson_mobileno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/strmobileno"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
        <TextView
                android:id="@+id/textview_lable_requestraisedon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strrequestraisedon"/>

        <TextView
                android:id="@+id/textview_requestraisedon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="24/Nov/2018"
                android:layout_marginLeft="8dp"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/lylt_engineerdetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_engineer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="75">
            <EditText
                    android:id="@+id/edittext_engineername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/strengineername"
                    android:maxLength="150"
                    android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_engineer_mobileno"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25">
            <EditText
                    android:id="@+id/edittext_engineer_mobileno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/strmobileno"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_issue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
        <EditText
                android:id="@+id/edittext_issue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/strissue"
                android:singleLine="false"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_issuedetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
        <EditText
                android:id="@+id/edittext_issuedetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/strissuedetails"
                android:singleLine="false"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/strsubmit"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorwhite"
            android:layout_gravity="right"
            android:layout_margin="15dp"/>
</LinearLayout>