<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:padding="25dp">


    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">
        <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/strusername"
                android:textColorHint="@color/colortexthint"
                android:maxLength="100"
                android:singleLine="true"
        android:drawableLeft="@drawable/ic_username"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/input_username">
        <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/strpassword"
                android:textColorHint="@color/colortexthint"
                android:maxLength="100"
                android:inputType="textPassword"
                android:singleLine="true"
        android:drawableLeft="@drawable/ic_password"/>
    </android.support.design.widget.TextInputLayout>
    <ImageView
            android:id="@+id/imgview_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_menu_camera"
            app:layout_constraintBottom_toTopOf="@+id/input_username"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strsubmit"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorwhite"
            android:textSize="@dimen/textsize_medium"
            app:layout_constraintTop_toBottomOf="@+id/input_password"
            android:layout_marginTop="20dp"/>

</android.support.constraint.ConstraintLayout>